# 2048-From-Scratch

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  compile_commands.json
game/: game.cpp  game.hpp
game2048/: CMakeLists.txt
game2048/include/game2048/: game2048.hpp  tile.hpp
game2048/src/: game2048.cpp  tile.cpp
gfs/: CMakeLists.txt  matrix.hpp  shader.hpp  window.cpp  window.hpp
gfs/include/gfs/: buffer.hpp  console_logger.hpp  graphics.hpp  logger.hpp  matrix.hpp  pipeline.hpp  renderer.hpp  shader.hpp  shader_library.hpp  shader_library_builder.hpp  vertex.hpp  window.hpp
gfs/src/: buffer.cpp  matrix.cpp  renderer.cpp  window.cpp
linux/: main.cpp
linux/src/: ctx.hpp  sdl_gl.hpp  sdl_win.hpp  sdl_wrap.hpp  util.hpp
macos/: AppDelegate.h  AppDelegate.mm  MacRenderer.h  MacRenderer.mm  MacShader.h  MacShader.mm  MacShaderLibrary.h  MacShaderLibrary.mm  MacShaderLibraryBuilder.h  MacShaderLibraryBuilder.mm  MacWindow.h  MacWindow.mm  MyViewController.h  MyViewController.mm  Renderer.h  Renderer.mm  main.mm
macos/Base.lproj/: MainMenu.xib
src/: Matrix.hpp  main.mm
